--- a/Armut CaseStudy/View/Services/Header/ServicesHeader.xib
+++ b/Armut CaseStudy/View/Services/Header/ServicesHeader.xib
@@ -19,7 +19,7 @@
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="iTd-2v-7th">
                             <rect key="frame" x="2.3333333333333428" y="0.0" width="370.33333333333326" height="410"/>
-                            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="0.40235122369260207" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="iTd-2v-7th" secondAttribute="height" multiplier="1438:1592" id="MPe-JM-Fq5"/>
                             </constraints>
