--- a/Armut CaseStudy/View/Services/Base.lproj/Services.storyboard
+++ b/Armut CaseStudy/View/Services/Base.lproj/Services.storyboard
@@ -19,7 +19,7 @@
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GJW-EN-QSy">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="50" height="50"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="50" height="50"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
@@ -51,6 +51,10 @@
                             <connections>
                                 <outlet property="lblTitle" destination="ugS-cl-cXL" id="rRc-fy-dWa"/>
                             </connections>
+                        </collectionReusableView>
+                        <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="sectionFooterReuseId" id="lGF-Da-m3g" customClass="SectionFooter" customModule="Armut_CaseStudy" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="178" width="414" height="50"/>
+                            <autoresizingMask key="autoresizingMask"/>
                         </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="vDA-cv-bGl" id="4JB-rE-Tg3"/>
