--- a/Armut CaseStudy/View/All Services/Base.lproj/Services.storyboard
+++ b/Armut CaseStudy/View/All Services/Base.lproj/Services.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vDA-cv-bGl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tmi-Pz-Y4q">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -61,10 +61,32 @@
                             <outlet property="delegate" destination="vDA-cv-bGl" id="hBf-Lp-iZS"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="Ial-z0-leH">
+                        <barButtonItem key="backBarButtonItem" title="      " id="5gR-TX-PsR"/>
+                    </navigationItem>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uce-lk-k2j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="14" y="183"/>
+            <point key="canvasLocation" x="923.1884057971015" y="182.8125"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5Vz-uq-khj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tmi-Pz-Y4q" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4g6-7F-9EZ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vDA-cv-bGl" kind="relationship" relationship="rootViewController" id="Ziw-Fx-Yle"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r5R-dQ-ui0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="13.043478260869566" y="182.8125"/>
         </scene>
     </scenes>
     <resources>
