--- a/Armut CaseStudy/View/Service Detail/ServiceDetail.storyboard
+++ b/Armut CaseStudy/View/Service Detail/ServiceDetail.storyboard
@@ -3,8 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -37,7 +37,7 @@
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="oKN-WX-EW0">
                                 <rect key="frame" x="0.0" y="88" width="414" height="684"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" name="Background Color"/>
                                 <connections>
                                     <outlet property="dataSource" destination="WAn-eR-hVk" id="pJt-Mc-YEj"/>
                                     <outlet property="delegate" destination="WAn-eR-hVk" id="eJn-fA-WyE"/>
@@ -45,7 +45,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QwI-lb-Dpu"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="Background Color"/>
                         <constraints>
                             <constraint firstItem="xr2-nk-W4t" firstAttribute="leading" secondItem="jdO-XH-5gD" secondAttribute="leading" constant="20" id="4cC-ey-2mv"/>
                             <constraint firstItem="oKN-WX-EW0" firstAttribute="trailing" secondItem="QwI-lb-Dpu" secondAttribute="trailing" id="73n-dY-wd4"/>
@@ -90,8 +90,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="Background Color">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
